# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# Development firmware application
# Includes debug features, verbose logging, test modes
#
# Usage:
#   bazel build //maco_firmware/apps/dev:dev
#   bazel run //maco_firmware/apps/dev:flash

load("@particle_bazel//rules:particle_firmware.bzl", "particle_firmware", "particle_flash_binary")
load("@particle_bazel//rules:particle_memory_budget.bzl", "particle_memory_budget")
load("@pigweed//pw_system/py:console.bzl", "device_console", "device_simulator_console")
load("@pigweed//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")
load("@pigweed//targets/host_device_simulator:transition.bzl", "host_device_simulator_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

DEV_DEPS = [
    "//maco_firmware/modules/terminal_ui",
    "//maco_firmware/modules/app_state:session_controller",
    "//maco_firmware/modules/app_state:session_fsm",
    "//maco_firmware/modules/app_state:system_state",
    "//maco_firmware/modules/device_config",
    "//maco_firmware/modules/display",
    "//maco_firmware/modules/display:display_metrics",
    "//maco_firmware/modules/gateway:gateway_client",
    "//maco_firmware/modules/gateway:gateway_connection_check",
    "//maco_firmware/modules/app_state:tag_verifier",
    "//maco_firmware/modules/machine_control:default_machine_sensor",
    "//maco_firmware/modules/machine_control:machine_controller",
    "//maco_firmware/modules/nfc_reader",
    "//maco_firmware/modules/session_upload:session_store",
    "//maco_firmware/modules/session_upload:usage_uploader",
    "//maco_firmware/modules/stack_monitor",
    "//maco_firmware/modules/led_animator:button_effects",
    "//maco_firmware/modules/led_animator:nfc_effects",
    "//maco_firmware/modules/terminal_led_effects",
    "//maco_firmware/services:maco_service",
    "//maco_firmware/system",
    "//maco_firmware/system:headers",
    "@pigweed//pw_async2:system_time_provider",
    "@pigweed//pw_log",
    "@pigweed//pw_system:async",
    "@pigweed//pw_metric:global",
    "@pigweed//pw_metric:metric_service_nanopb",
    # Backend implementations required for linking
    "@pigweed//pw_assert:assert_backend_impl",
    "@pigweed//pw_assert:check_backend_impl",
    "@pigweed//pw_log:backend_impl",
    "@pigweed//pw_system:extra_platform_libs",
]

cc_binary(
    name = "simulator_binary",
    srcs = ["main.cc"],
    deps = DEV_DEPS,
)

host_device_simulator_binary(
    name = "simulator",
    binary = ":simulator_binary",
)

particle_firmware(
    name = "dev",
    srcs = ["main.cc"],
    platform = "//maco_firmware/targets/p2:p2_system",
    deps = [
        "//maco_firmware/modules/terminal_ui",
        "//maco_firmware/modules/app_state:session_controller",
        "//maco_firmware/modules/app_state:session_fsm",
        "//maco_firmware/modules/app_state:system_state",
        "//maco_firmware/modules/device_config",
        "//maco_firmware/modules/display",
        "//maco_firmware/modules/display:display_metrics",
        "//maco_firmware/modules/app_state:tag_verifier",
        "//maco_firmware/modules/gateway:gateway_client",
        "//maco_firmware/modules/gateway:gateway_connection_check",
        "//maco_firmware/modules/machine_control:default_machine_sensor",
        "//maco_firmware/modules/machine_control:machine_controller",
        "//maco_firmware/modules/nfc_reader",
        "//maco_firmware/modules/session_upload:session_store",
        "//maco_firmware/modules/session_upload:usage_uploader",
        "//maco_firmware/modules/stack_monitor",
        "//maco_firmware/modules/led_animator:button_effects",
        "//maco_firmware/modules/led_animator:nfc_effects",
        "//maco_firmware/modules/terminal_led_effects",
        "//maco_firmware/services:maco_service",
        "//maco_firmware/system",
        "//maco_firmware/system:headers",
        "@pigweed//pw_async2:system_time_provider",
        "@pigweed//pw_log",
        "@pigweed//pw_metric:global",
        "@pigweed//pw_metric:metric_service_nanopb",
        "@pigweed//pw_system:async",
        # Tokenized log handler (provides pw_log_tokenized_HandleLog)
        "@pigweed//pw_system:log_backend",
        # Includes tokenizer linker script for ELF token database
        "@pigweed//pw_system:extra_platform_libs",
    ],
)

particle_flash_binary(
    name = "flash",
    firmware = ":dev.bin",
)

particle_memory_budget(
    name = "memory_budget",
    elf = ":dev",
    # Limits with ~10% flash and ~5% SRAM headroom above current watermark.
    # Bump consciously when adding features that exceed these.
    sram_limit = 122000,
    psram_limit = 605000,
    flash_limit = 680000,
    golden = "testdata/memory_budget.txt",
)

# Console for P2 device - depends on :dev ELF for tokens
device_console(
    name = "console",
    binary = ":dev",
    script = "//tools:console",
)

# Console for simulator - launches simulator and connects
device_simulator_console(
    name = "console_sim",
    host_binary = ":simulator",
    script = "//tools:device_sim",
)

