# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# Development firmware application
# Includes debug features, verbose logging, test modes
#
# Usage:
#   bazel build //maco_firmware/apps/dev:dev
#   bazel run //maco_firmware/apps/dev:flash

load("@particle_bazel//rules:particle_firmware.bzl", "particle_firmware", "particle_flash_binary")
load("@particle_bazel//rules:particle_memory_budget.bzl", "particle_memory_budget")
load("@pigweed//pw_system/py:console.bzl", "device_console", "device_simulator_console")
load("@pigweed//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")
load("@pigweed//targets/host_device_simulator:transition.bzl", "host_device_simulator_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

# The application lives in //maco_firmware/apps/app_main; dev is a thin main()
# that passes a dev AppConfig. Only backend impls (which differ host vs P2) are
# declared per-target here.

cc_binary(
    name = "simulator_binary",
    srcs = ["main.cc"],
    deps = [
        "//maco_firmware/apps/app_main",
        # Host backend implementations required for linking
        "@pigweed//pw_assert:assert_backend_impl",
        "@pigweed//pw_assert:check_backend_impl",
        "@pigweed//pw_log:backend_impl",
        "@pigweed//pw_system:extra_platform_libs",
    ],
)

host_device_simulator_binary(
    name = "simulator",
    binary = ":simulator_binary",
)

particle_firmware(
    name = "dev",
    srcs = ["main.cc"],
    platform = "//maco_firmware/targets/p2:p2_system",
    deps = [
        "//maco_firmware/apps/app_main",
        # Tokenized log handler (provides pw_log_tokenized_HandleLog)
        "@pigweed//pw_system:log_backend",
        # Includes tokenizer linker script for ELF token database
        "@pigweed//pw_system:extra_platform_libs",
    ],
)

particle_flash_binary(
    name = "flash",
    firmware = ":dev.bin",
)

particle_memory_budget(
    name = "memory_budget",
    elf = ":dev",
    # Limits with ~10% flash and ~5% SRAM headroom above current watermark.
    # Bump consciously when adding features that exceed these.
    sram_limit = 122000,
    psram_limit = 640000,
    flash_limit = 680000,
    golden = "testdata/memory_budget.txt",
)

# Console for P2 device - depends on :dev ELF for tokens
device_console(
    name = "console",
    binary = ":dev",
    script = "//tools:console",
)

# Console for simulator - launches simulator and connects
device_simulator_console(
    name = "console_sim",
    host_binary = ":simulator",
    script = "//tools:device_sim",
)

