# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# Tag personalization firmware (P2 only).
# Probes NFC tags, sets diversified keys via cloud, and configures SDM.
#
# Usage:
#   ./pw build p2                    # Build (included in p2 target)
#   bazel run //maco_firmware/apps/personalize:flash  # Flash to device

load("@particle_bazel//rules:particle_firmware.bzl", "particle_firmware", "particle_flash_binary")
load("@pigweed//pw_system/py:console.bzl", "device_console")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

# Personalize app screens
cc_library(
    name = "screens",
    srcs = ["screens/personalize_screen.cc"],
    hdrs = ["screens/personalize_screen.h"],
    deps = [
        "//maco_firmware/modules/app_state/ui:snapshot",
        "//maco_firmware/modules/ui:data_binding",
        "//maco_firmware/modules/ui:screen",
        "//third_party/lvgl",
        "@pigweed//pw_log",
        "@pigweed//pw_string",
    ],
)

# SDM constants - NDEF template and SDM configuration bytes
cc_library(
    name = "sdm_constants",
    hdrs = ["sdm_constants.h"],
    deps = [
        "@pigweed//pw_bytes",
    ],
)

# Tag identification - classify tags as factory/MaCo/unknown
cc_library(
    name = "tag_identifier",
    srcs = ["tag_identifier.cc"],
    hdrs = ["tag_identifier.h"],
    deps = [
        "//maco_firmware/devices/pn532:tag_info",
        "//maco_firmware/modules/device_secrets",
        "//maco_firmware/modules/nfc_reader",
        "//maco_firmware/modules/nfc_tag:nfc_tag",
        "//maco_firmware/modules/nfc_tag/ntag424:local_key_provider",
        "//maco_firmware/modules/nfc_tag/ntag424:ntag424_tag",
        "@pigweed//pw_async2:coro",
        "@pigweed//pw_log",
        "@pigweed//pw_random",
        "@pigweed//pw_result",
    ],
)

# Key provisioning - idempotent key changes on NTAG424 tags
cc_library(
    name = "key_updater",
    srcs = ["key_updater.cc"],
    hdrs = ["key_updater.h"],
    deps = [
        "//maco_firmware/modules/firebase:firebase_client",
        "//maco_firmware/modules/nfc_tag/ntag424:local_key_provider",
        "//maco_firmware/modules/nfc_tag/ntag424:ntag424_session",
        "//maco_firmware/modules/nfc_tag/ntag424:ntag424_tag",
        "@pigweed//pw_async2:coro",
        "@pigweed//pw_bytes",
        "@pigweed//pw_log",
        "@pigweed//pw_random",
        "@pigweed//pw_result",
    ],
)

# SDM configurator - NDEF write + ChangeFileSettings
cc_library(
    name = "sdm_configurator",
    srcs = ["sdm_configurator.cc"],
    hdrs = ["sdm_configurator.h"],
    deps = [
        ":sdm_constants",
        "//maco_firmware/modules/nfc_tag/ntag424:ntag424_session",
        "//maco_firmware/modules/nfc_tag/ntag424:ntag424_tag",
        "@pigweed//pw_async2:coro",
        "@pigweed//pw_log",
        "@pigweed//pw_status",
    ],
)

# Personalization coordinator - orchestrates identification, keys, and SDM
cc_library(
    name = "personalize_coordinator",
    srcs = ["personalize_coordinator.cc"],
    hdrs = ["personalize_coordinator.h"],
    deps = [
        ":key_updater",
        ":screens",
        ":sdm_configurator",
        ":tag_identifier",
        "//maco_firmware:types",
        "//maco_firmware/devices/pn532:tag_info",
        "//maco_firmware/modules/device_secrets",
        "//maco_firmware/modules/firebase:firebase_client",
        "//maco_firmware/modules/nfc_reader",
        "//maco_firmware/modules/nfc_tag:nfc_tag",
        "//maco_firmware/modules/nfc_tag/ntag424:ntag424_tag",
        "@pigweed//pw_allocator",
        "@pigweed//pw_async2:coro",
        "@pigweed//pw_async2:coro_or_else_task",
        "@pigweed//pw_async2:dispatcher",
        "@pigweed//pw_log",
        "@pigweed//pw_random",
        "@pigweed//pw_sync:interrupt_spin_lock",
        "@pigweed//pw_sync:lock_annotations",
    ],
)

# Personalization RPC service
cc_library(
    name = "personalization_rpc_service",
    srcs = ["personalization_rpc_service.cc"],
    hdrs = ["personalization_rpc_service.h"],
    deps = [
        ":personalize_coordinator",
        "//maco_firmware/protos:personalization_service_nanopb_rpc",
        "@pigweed//pw_log",
    ],
)

# P2 firmware binary
particle_firmware(
    name = "personalize",
    srcs = ["main.cc"],
    platform = "//maco_firmware/targets/p2:p2_system",
    deps = [
        ":personalization_rpc_service",
        ":personalize_coordinator",
        ":screens",
        "//maco_firmware/modules/display",
        "//maco_firmware/modules/gateway:gateway_client",
        "//maco_firmware/modules/nfc_reader",
        "//maco_firmware/modules/stack_monitor",
        "//maco_firmware/modules/status_bar",
        "//maco_firmware/modules/ui:app_shell",
        "//maco_firmware/system",
        "//maco_firmware/system:headers",
        "@pigweed//pw_log",
        "@pigweed//pw_system:async",
        "@pigweed//pw_system:log_backend",
        "@pigweed//pw_system:extra_platform_libs",
    ],
)

particle_flash_binary(
    name = "flash",
    firmware = ":personalize.bin",
)

device_console(
    name = "console",
    binary = ":personalize",
    script = "//tools:console",
)
