# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//maco_firmware:__subpackages__"])

# Capacitive touch input driver
cc_library(
    name = "cap_touch",
    srcs = ["cap_touch_input_driver.cc"],
    hdrs = ["cap_touch_input_driver.h"],
    deps = [
        "//maco_firmware/modules/display:touch_button_driver",
        "//third_party/lvgl",
        "@pigweed//pw_log",
    ],
)
