# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@particle_bazel//rules:particle_test.bzl", "particle_cc_test")
load("@pigweed//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")

package(default_visibility = ["//maco_firmware:__subpackages__"])

# SPI LCD driver for Pico-ResTouch-LCD-2.8 (ST7789)
cc_library(
    name = "pico_res28_lcd",
    srcs = ["pico_res28_lcd_driver.cc"],
    hdrs = ["pico_res28_lcd_driver.h"],
    deps = [
        "//maco_firmware/modules/display:display_driver",
        "@lvgl//:lvgl",
        "@pigweed//pw_bytes",
        "@pigweed//pw_digital_io",
        "@pigweed//pw_log",
        "@pigweed//pw_spi:initiator",
        "@pigweed//pw_status",
        "@pigweed//pw_thread:sleep",
    ],
)

# On-device hardware test (requires P2 with display connected)
particle_cc_test(
    name = "hardware_test",
    srcs = ["hardware_test.cc"],
    platform = "//maco_firmware/targets/p2:p2",
    deps = [
        ":pico_res28_lcd",
        "//maco_firmware/modules/fonts",
        "@lvgl//:lvgl",
        "@particle_bazel//:device_os_headers",
        "@particle_bazel//pw_digital_io_particle:digital_io",
        "@particle_bazel//pw_spi_particle:initiator",
        "@pigweed//pw_log",
    ],
)

# Host unit test for byte formatting verification
pw_cc_test(
    name = "pico_res28_lcd_driver_test",
    srcs = ["pico_res28_lcd_driver_test.cc"],
    deps = [
        ":pico_res28_lcd",
        "//maco_firmware/modules/fonts",
        "@lvgl//:lvgl",
        "@pigweed//pw_bytes",
        "@pigweed//pw_digital_io:digital_io_mock",
        "@pigweed//pw_spi:initiator_mock",
    ],
)
