# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@particle_bazel//rules:particle_test.bzl", "particle_cc_test")

package(default_visibility = ["//maco_firmware:__subpackages__"])

# SPI LCD driver for Pico-ResTouch-LCD-2.8 (ST7789)
# This driver uses direct HAL SPI and only compiles for P2.
cc_library(
    name = "pico_res28_lcd",
    srcs = ["pico_res28_lcd_driver.cc"],
    hdrs = ["pico_res28_lcd_driver.h"],
    deps = [
        "//maco_firmware/modules/display:display_driver",
        "//maco_firmware/modules/display:display_metrics",
        "//third_party/lvgl",
        "@particle_bazel//:device_os_headers",
        "@pigweed//pw_bytes",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_digital_io",
        "@pigweed//pw_log",
        "@pigweed//pw_status",
        "@pigweed//pw_thread:thread",
        "@pigweed//pw_thread:sleep",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

# On-device hardware test (requires P2 with display connected)
particle_cc_test(
    name = "hardware_test",
    srcs = ["hardware_test.cc"],
    platform = "//maco_firmware/targets/p2:p2",
    deps = [
        ":pico_res28_lcd",
        "//maco_firmware/modules/fonts",
        "//third_party/lvgl",
        "@particle_bazel//:device_os_headers",
        "@particle_bazel//pw_digital_io_particle:digital_io",
        "@particle_bazel//pw_thread_particle:thread",
        "@pigweed//pw_log",
    ],
)
