# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@particle_bazel//rules:particle_test.bzl", "particle_cc_test")
load("@pigweed//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//maco_firmware:__subpackages__"])

# Tag information struct (detected tag metadata)
cc_library(
    name = "tag_info",
    hdrs = ["tag_info.h"],
    deps = [
        "@pigweed//pw_bytes",
    ],
)

# PN532 NFC reader (merged driver + reader + FSM)
cc_library(
    name = "pn532_nfc_reader",
    srcs = [
        "pn532_await_idle_future.cc",
        "pn532_call_future.cc",
        "pn532_check_present_future.cc",
        "pn532_command.cc",
        "pn532_detect_tag_future.cc",
        "pn532_nfc_reader.cc",
        "pn532_nfc_reader_fsm.cc",
        "pn532_transceive_future.cc",
    ],
    hdrs = [
        "pn532_await_idle_future.h",
        "pn532_call_future.h",
        "pn532_check_present_future.h",
        "pn532_command.h",
        "pn532_constants.h",
        "pn532_detect_tag_future.h",
        "pn532_nfc_reader.h",
        "pn532_nfc_reader_fsm.h",
        "pn532_transceive_future.h",
    ],
    deps = [
        ":tag_info",
        "//maco_firmware/modules/nfc_reader",
        "//maco_firmware/modules/nfc_reader:nfc_error",
        "//maco_firmware/modules/nfc_reader:nfc_event",
        "//maco_firmware/modules/nfc_reader:transceive_request",
        "//maco_firmware/modules/nfc_tag",
        "//third_party/etl",
        "@pigweed//pw_assert:check",
        "@pigweed//pw_async2",
        "@pigweed//pw_async2:dispatcher",
        "@pigweed//pw_async2:value_future",
        "@pigweed//pw_bytes",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_digital_io",
        "@pigweed//pw_log",
        "@pigweed//pw_result",
        "@pigweed//pw_status",
        "@pigweed//pw_stream",
        "@pigweed//pw_thread:sleep",
    ],
)

pw_cc_test(
    name = "pn532_command_test",
    srcs = ["pn532_command_test.cc"],
    deps = [
        ":pn532_nfc_reader",
        "@pigweed//pw_bytes",
    ],
)

# On-device hardware test (requires P2 with PN532 connected)
particle_cc_test(
    name = "hardware_test",
    srcs = ["hardware_test.cc"],
    platform = "//maco_firmware/targets/p2:p2",
    deps = [
        ":pn532_nfc_reader",
        "@particle_bazel//:device_os_headers",
        "@particle_bazel//pw_digital_io_particle:digital_io",
        "@particle_bazel//pw_stream_particle:uart_stream",
        "@pigweed//pw_async2:testing",
        "@pigweed//pw_log",
    ],
)
