# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@particle_bazel//rules:particle_test.bzl", "particle_cc_test")
load("@pigweed//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//maco_firmware:__subpackages__"])

# Tag information struct (detected tag metadata)
cc_library(
    name = "tag_info",
    hdrs = ["tag_info.h"],
    deps = [
        "@pigweed//pw_bytes",
    ],
)

# PN532 NFC reader (coroutine-based implementation)
cc_library(
    name = "pn532_nfc_reader",
    srcs = [
        "pn532_command.cc",
        "pn532_nfc_reader.cc",
    ],
    hdrs = [
        "pn532_command.h",
        "pn532_constants.h",
        "pn532_nfc_reader.h",
    ],
    deps = [
        ":tag_info",
        "//maco_firmware/modules/nfc_reader",
        "//maco_firmware/modules/nfc_reader:nfc_error",
        "//maco_firmware/modules/nfc_reader:nfc_event",
        "//maco_firmware/modules/nfc_reader:transceive_request",
        "//maco_firmware/modules/nfc_tag",
        "@particle_bazel//pb_uart:async_uart",
        "@pigweed//pw_allocator:allocator",
        "@pigweed//pw_assert:check",
        "@pigweed//pw_async2:coro",
        "@pigweed//pw_async2:coro_or_else_task",
        "@pigweed//pw_async2:dispatcher",
        "@pigweed//pw_async2:system_time_provider",
        "@pigweed//pw_async2:value_future",
        "@pigweed//pw_bytes",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_digital_io",
        "@pigweed//pw_hex_dump:log_bytes",
        "@pigweed//pw_log",
        "@pigweed//pw_result",
        "@pigweed//pw_status",
    ],
)

pw_cc_test(
    name = "pn532_command_test",
    srcs = ["pn532_command_test.cc"],
    deps = [
        ":pn532_nfc_reader",
        "@pigweed//pw_bytes",
    ],
)

pw_cc_test(
    name = "pn532_event_test",
    srcs = ["pn532_event_test.cc"],
    deps = [
        "//maco_firmware/modules/nfc_reader:nfc_event",
        "@pigweed//pw_async2:func_task",
        "@pigweed//pw_async2:testing",
        "@pigweed//pw_async2:value_future",
    ],
)

# On-device hardware test (requires P2 with PN532 connected)
particle_cc_test(
    name = "hardware_test",
    srcs = ["hardware_test.cc"],
    platform = "//maco_firmware/targets/p2:p2",
    deps = [
        ":pn532_nfc_reader",
        "@particle_bazel//:device_os_headers",
        "@particle_bazel//pb_uart:async_uart",
        "@particle_bazel//pw_digital_io_particle:digital_io",
        "@pigweed//pw_allocator:testing",
        "@pigweed//pw_async2:basic_dispatcher",
        "@pigweed//pw_async2:coro",
        "@pigweed//pw_async2:coro_or_else_task",
        "@pigweed//pw_async2:system_time_provider",
        "@pigweed//pw_log",
    ],
)
