# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# Application state management - thread-safe state for UI

load("@pigweed//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//maco_firmware:__subpackages__"])

# State identifiers
cc_library(
    name = "state_id",
    hdrs = ["state_id.h"],
)

# Thread-safe application state
cc_library(
    name = "app_state",
    srcs = ["app_state.cc"],
    hdrs = ["app_state.h"],
    deps = [
        "//maco_firmware/modules/app_state/ui:snapshot",
        "@pigweed//pw_assert:check",
        "@pigweed//pw_bytes",
        "@pigweed//pw_sync:lock_annotations",
        "@pigweed//pw_sync:mutex",
    ],
)

# Tag verifier - authenticates NTAG424 tags and reads real UID
cc_library(
    name = "tag_verifier",
    srcs = ["tag_verifier.cc"],
    hdrs = ["tag_verifier.h"],
    deps = [
        ":app_state",
        "//maco_firmware/devices/pn532:tag_info",
        "//maco_firmware/modules/device_secrets",
        "//maco_firmware/modules/nfc_reader",
        "//maco_firmware/modules/nfc_reader:nfc_event",
        "//maco_firmware/modules/nfc_tag",
        "//maco_firmware/modules/nfc_tag/ntag424:local_key_provider",
        "//maco_firmware/modules/nfc_tag/ntag424:ntag424_tag",
        "@pigweed//pw_allocator:allocator",
        "@pigweed//pw_async2:coro",
        "@pigweed//pw_async2:coro_or_else_task",
        "@pigweed//pw_async2:dispatcher",
        "@pigweed//pw_log",
        "@pigweed//pw_random",
    ],
)

pw_cc_test(
    name = "app_state_test",
    srcs = ["app_state_test.cc"],
    deps = [
        ":app_state",
        "@pigweed//pw_bytes",
    ],
)

pw_cc_test(
    name = "tag_verifier_test",
    srcs = ["tag_verifier_test.cc"],
    deps = [
        ":app_state",
        ":tag_verifier",
        "//maco_firmware/modules/device_secrets:device_secrets_mock",
        "//maco_firmware/modules/nfc_reader/mock:mock_nfc_reader",
        "//maco_firmware/modules/nfc_tag:iso14443_tag_mock",
        "//maco_firmware/modules/nfc_tag/ntag424:ntag424_tag_mock",
        "@pigweed//pw_allocator:testing",
        "@pigweed//pw_async2:basic_dispatcher",
        "@pigweed//pw_bytes",
        "@pigweed//pw_random",
    ],
)
